[Fix] Orizzontal plan-card spacing

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -89,6 +89,8 @@ font-size: 1.2rem;
 
 .plan-description.orizzontal {
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .plan-description.orizzontal a {
